--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="Viewport"content="width=devicewidth,initial-scale1.0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
 <title>Resume Building</title>
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -11,15 +11,15 @@
 	<div class="main">
 	<div class="right">
 	<img src="image.jpg"alt="image"/>
-	<h2>      Shaik Abdul Baasith   </h2>
+	<h2>Abdul Baasith</h2>
 	<p>Email:abdulbukku@gmail.com</p>
 	<p>Ph No:7075495466</p>
 	</div>
 	<div class="left">
-	<h2>     Educational Information     </h2>
+	<h3>     Educational Information     </h3>
 	</div>
 	</div>
-</div>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
 
