--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>RESUME</h1>
 	<div class="main">
-	<div class="right">
+	<!-- <div class="right">
 	<img src="image.jpg"alt="image"/>
 	<h2>Abdul Baasith</h2>
 	<p>Email:abdulbukku@gmail.com</p>
@@ -17,7 +17,7 @@
 	</div>
 	<div class="left">
 	<h3>     Educational Information     </h3>
-	</div>
+	</div> -->
 	</div>
 <script type="text/javascript" src="main.js"></script>
 </body>
